[package]
name = "qstash-rs"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Moretti <daniel.morettiv@gmail.com>"]
publish = true
repository = "https://github.com/DrSh4dow/qstash-rs"
license = "MIT"
keywords = ["upstash", "qstash", "async-queue", "sdk", "webdev", "utilities"]


[dependencies]
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
tracing = "0.1.37"

[dev-dependencies]
dotenvy = "0.15.7"
envy = "0.4.2"
tokio = { version = "1.32.0", features = ["full"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
