[package]
name = "qstash-rs"
version = "0.1.1"
edition = "2021"
authors = ["Daniel Moretti <daniel.morettiv@gmail.com>"]
description = "A Rust SDK for Upstash QStash"
publish = true
repository = "https://github.com/DrSh4dow/qstash-rs"
homepage = "https://github.com/DrSh4dow/qstash-rs"
license = "MIT"
readme = "README.md"
keywords = ["upstash", "qstash", "async-queue", "sdk", "api"]


[dependencies]
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
tracing = "0.1.37"

[dev-dependencies]
dotenvy = "0.15.7"
envy = "0.4.2"
tokio = { version = "1.32.0", features = ["full"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-test = "0.2.4"
